--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">animes_app_arnau</string>
+    <string name="app_name">Animes</string>
+    <string name="textTitle">Anime</string>
+    <string name="textView1">Hello there!</string>
+    <string name="textView2">Sign up to start</string>
+    <string name="textView3">Welcome Back!</string>
+    <string name="textView4">Log in to start</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="phone">Phone</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="login">Login</string>
 </resources>
